# YVD

./: README.md  README_RU.md  main.py  main_ru.py  pyproject.toml  requirements.txt
