[tool.poetry]
name = "YouTubeVideoDownloader"
version = "1.0"
description = ""
authors = ["Ant.Butkov"]

[tool.poetry.dependencies]
python = "^3.10"
art = "^5.4"
pytube = "^11.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
